--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
         <div id="img-div">
         <div class="row">
         <div class="column">  
-            <img id="image" src="images/KobeBryantPortrait.jpg.webp" alt="Kobe Bryant 1978-2020">
-            <img id="image" src="images/kobe.jpg" alt="Kobe Bryant Smiling">
+            <img id="image" src="Images/KobeBryantPortrait.jpg.webp" alt="Kobe Bryant 1978-2020">
+            <img id="image" src="Images/kobe.jpg" alt="Kobe Bryant Smiling">
         </div>
         <div class="column">    
-            <img id="image" src="images/Kobe-smile.jpg" alt="Kobe Bryant with Lebron James">
+            <img id="image" src="Images/Kobe-smile.jpg" alt="Kobe Bryant with Lebron James">
             <img id="image" src="images/Kobe-lion.jpg.webp" alt="Kobe Bryant is fierce">
         </div>
             <div class="column">  
-            <img id="image" src="images/Kobe-inspiration.png" alt="Kobe Bryant Quote">
-            <img id="image" src="images/kobe-bryant-.jpg" alt="Kobe Bryant Preparing a shot">
+            <img id="image" src="Images/Kobe-inspiration.png" alt="Kobe Bryant Quote">
+            <img id="image" src="Images/kobe-bryant-.jpg" alt="Kobe Bryant Preparing a shot">
         </div>
         </div>    
         </div>
