--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="column">    
             <img id="image" src="Images/Kobe-smile.jpg" alt="Kobe Bryant with Lebron James">
-            <img id="image" src="images/Kobe-lion.jpg.webp" alt="Kobe Bryant is fierce">
+            <img id="image" src="Images/Kobe-lion.jpg.webp" alt="Kobe Bryant is fierce">
         </div>
             <div class="column">  
             <img id="image" src="Images/Kobe-inspiration.png" alt="Kobe Bryant Quote">
