--- a/index.html
+++ b/index.html
@@ -125,9 +125,12 @@
             <img id="image" src="Images/KobeBryantPortrait.jpg.webp" alt="Kobe Bryant 1978-2020">
             <img id="image" src="Images/kobe.jpg" alt="Kobe Bryant Smiling">
         </div>
+
         <div class="column">    
             <img id="image" src="Images/Kobe-smile.jpg" alt="Kobe Bryant with Lebron James">
             <img id="image" src="Images/Kobe-lion.jpg.webp" alt="Kobe Bryant is fierce">
+            <p id="img-caption"><em>Kobe Bryant 1978-2020, gone but never forgotten.</em></p>
+        
         </div>
             <div class="column">  
             <img id="image" src="Images/Kobe-inspiration.png" alt="Kobe Bryant Quote">
@@ -136,12 +139,11 @@
         </div>    
         </div>
         <div id="content">
-        <div class="row>"
-            <p id="img-caption"><em>Kobe Bryant 1978-2020, gone but never forgotten.</em></p>
-        </div>
-        <div class="row"> 
+        <div class="row">
             <p id="tribute-info">Kobe Bean Bryant or "Black Mamba" was an American Legend who dominated the NBA during his 20-season career with the Los Angeles Lakers. He is regarded as one of the greatest players, along with one of the most decorated NBA careers in history. Bryant was a Leader who instilled great passion, dedication and resiliance to all those around him and proved to anyone nothing can stop you from chasing your dreams.Kobe Bryant was a man who never allowed lifes obstacles be a deterant to his vision. He will forever be in our hearts and may his legacy live on forever.</p>
-        </div>  
+        </div>
+        </div> 
+
         <div class="row">
             <p id="quote"> <strong><em>"When you make a choice and say, 'Come hell or high water, I am going to be this,' then you should not be surprised when you are that. It should not be something that is intoxicating or out of character because you have seen this moment for so long that ... when that moment comes, of course it is here because it has been here the whole time, because it has been [in your mind] the whole time."</em></strong>- <a href="https://www.inc.com/marcel-schwantes/15-kobe-bryant-quotes-from-his-legendary-career-that-will-inspire-you.html" target="blank">INC.</a> </p>
         </div>
@@ -156,5 +158,5 @@
     </main>
     
 </body>
-
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
